--- a/src/features/projects/components/add-project/add-project.component.html
+++ b/src/features/projects/components/add-project/add-project.component.html
@@ -3,12 +3,12 @@
     <mat-card-title>Crear nuevo proyecto</mat-card-title>
   </mat-card-header>
   <form [formGroup]="addProjectForm" (ngSubmit)="addProject()">
-    <mat-card-content>
+    <mat-card-content class="add-project-form">
       <mat-form-field>
         <input matInput placeholder="Nombre" formControlName="name" required>
       </mat-form-field>
       <mat-form-field>
-        <input matInput placeholder="Descripcion" formControlName="description" required>
+        <textarea matInput placeholder="Descripcion" formControlName="description" required></textarea>
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions>
