--- a/src/features/projects/components/add-students-to-project/add-students-to-project.component.html
+++ b/src/features/projects/components/add-students-to-project/add-students-to-project.component.html
@@ -24,6 +24,11 @@
           <td mat-cell *matCellDef="let element">{{element.student.usuario.apellidos.split(' ')[1]}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="carne">
+          <th mat-header-cell *matHeaderCellDef>Carné</th>
+          <td mat-cell *matCellDef="let element">{{element.student.carne}}</td>
+        </ng-container>
+
         <ng-container matColumnDef="select">
           <th mat-header-cell *matHeaderCellDef>Asignar</th>
           <td mat-cell *matCellDef="let element">
