--- a/src/features/users/admin-students/components/student-profile/student-profile.component.html
+++ b/src/features/users/admin-students/components/student-profile/student-profile.component.html
@@ -1,1 +1,71 @@
-<p>student-profile works!</p>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Perfil de estudiante</mat-card-title>
+  </mat-card-header>
+  <form [formGroup]="studentForm">
+    <mat-card-content>
+      <mat-form-field>
+        <input matInput placeholder="Correo" formControlName="email" [required]="editing">
+        <mat-error *ngIf="email.hasError('email')">Digite un email valido</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Teléfono" formControlName="phone" [required]="editing">
+        <mat-error *ngIf="phone.hasError('pattern')">Solo se permiten números en el teléfono</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Nombre" formControlName="name" [required]="editing">
+        <mat-error *ngIf="name.hasError('pattern')">Solo se permiten letras en el nombre</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Apellidos" formControlName="lastNames" [required]="editing">
+        <mat-error *ngIf="lastNames.hasError('pattern')">Solo se permiten letras en los apellidos</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Carné" formControlName="carne" [required]="editing">
+        <mat-error *ngIf="carne.hasError('pattern')">El carné no cumple con el formato válido</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput placeholder="Horas" formControlName="hours" [required]="editing">
+        <mat-error *ngIf="hours.hasError('pattern')">Solo se permiten números</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Tipo</mat-label>
+        <mat-select formControlName="type" [required]="editing">
+          <mat-option *ngFor="let type of types" [value]="type">{{type}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Estado</mat-label>
+        <mat-select formControlName="status" [required]="editing">
+          <mat-option *ngFor="let status of statuses" [value]="status">{{status}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [matDatepicker]="startPicker" placeholder="Fecha de inicio" formControlName="startDate" [required]="editing">
+        <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+        <mat-datepicker #startPicker></mat-datepicker>
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [matDatepicker]="endPicker" placeholder="Fecha de finalización" formControlName="endDate" [required]="editing">
+        <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+        <mat-datepicker #endPicker></mat-datepicker>
+      </mat-form-field>
+      <mat-list>
+        <h3 mat-subheader>Proyectos</h3>
+        <mat-list-item *ngFor="let proyecto of proyectos" [routerLink]="['/proyectos/detalles/', proyecto]">
+          <mat-icon mat-list-icon>perm_data_setting</mat-icon>
+          <h4 mat-line>{{proyecto}}</h4>
+        </mat-list-item>
+      </mat-list>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" type="submit"
+              *ngIf=" !editing else editButtons"
+              [disabled]="">Editar</button>
+      <ng-template #editButtons>
+        <button mat-raised-button color="warn" (click)="editing = !editing;">Cancelar</button>
+        <button mat-raised-button color="primary">Guardar cambios</button>
+      </ng-template>
+    </mat-card-actions>
+  </form>
+</mat-card>
