--- a/src/features/projects/components/projects-home/projects-home.component.html
+++ b/src/features/projects/components/projects-home/projects-home.component.html
@@ -7,5 +7,5 @@
   </mat-card-content>
   <mat-card-actions></mat-card-actions>
 </mat-card>
-<app-add-project></app-add-project>
+<app-add-project *ngIf="!(isStudent$ | async)"></app-add-project>
 
