--- a/src/features/users/admin-reviewers/components/reviewers-list/reviewers-list.component.html
+++ b/src/features/users/admin-reviewers/components/reviewers-list/reviewers-list.component.html
@@ -1,1 +1,43 @@
-<p>reviewers-list works!</p>
+<table mat-table [dataSource]="reviewers$ | async">
+  <ng-container matColumnDef="email">
+    <th mat-header-cell *matHeaderCellDef>Correo</th>
+    <td mat-cell *matCellDef="let element">{{element.usuario.correo}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Nombre</th>
+    <td mat-cell *matCellDef="let element">{{element.usuario.nombre}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="lastN1">
+    <th mat-header-cell *matHeaderCellDef>Primer apellido</th>
+    <td mat-cell *matCellDef="let element">{{element.usuario.apellidos.split(' ')[0]}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="lastN2">
+    <th mat-header-cell *matHeaderCellDef>Segundo apellido</th>
+    <td mat-cell *matCellDef="let element">{{element.usuario.apellidos.split(' ')[1]}}</td>
+  </ng-container>
+  <ng-container matColumnDef="coordinator">
+    <th mat-header-cell *matHeaderCellDef>Coordinador</th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon *ngIf="element.esCoordinador">done</mat-icon>
+      <mat-icon *ngIf="!element.esCoordinador">close</mat-icon>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row
+      *matRowDef="let row; columns: displayedColumns;"
+      [routerLink]="['/usuarios/revisor/', row.usuario.correo]"></tr>
+</table>
+<div *ngIf="reviewersPage$ |async as page">
+  <mat-paginator
+    [length]="page.totalElements"
+    [pageSize]="page.size"
+    [pageIndex]="page.number"
+    [pageSizeOptions]="[2, 5, 10, 20]"
+    (page)="getNewPage($event)"
+  ></mat-paginator>
+</div>
+
