--- a/src/features/projects/components/project-details/project-details.component.html
+++ b/src/features/projects/components/project-details/project-details.component.html
@@ -31,8 +31,8 @@
     <button mat-raised-button color="primary" [routerLink]="['/proyectos/agregar-estudiantes', project.nombre]">Agregar estudiantes</button>
   </mat-card-actions>
 </mat-card>
-<mat-card *ngIf="!(isStudent$ | async)">
+<!--<mat-card *ngIf="!(isStudent$ | async)">
   <mat-card-actions>
     <button mat-raised-button color="warn" (click)="deleteProject()">Borrar proyecto</button>
   </mat-card-actions>
-</mat-card>
+</mat-card>-->
