--- a/src/features/activities/activities.component.html
+++ b/src/features/activities/activities.component.html
@@ -1,45 +1,56 @@
 <div>
   <h1>Actividades</h1>
-  <a mat-raised-button routerLink="/registrar-actividad" class="top-button" color="primary">Registrar actividad</a>
+  <a mat-raised-button routerLink="/registrar-actividad" class="top-button" color="primary"
+     *ngIf="(role$ | async) === 'Estudiante' else checkboxes">Registrar actividad</a>
+  <ng-template #checkboxes>
+    <mat-checkbox [checked]="showAccepted$ | async" (change)="changeAccepted()">Aceptadas</mat-checkbox>
+    <mat-checkbox [checked]="showPending$ | async" (change)="changePending()">Pendientes</mat-checkbox>
+    <mat-checkbox [checked]="showDeclined$ | async" (change)="changeDeclined()">Rechazadas</mat-checkbox>
+  </ng-template>
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
-  
+
+      <ng-container matColumnDef="correo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Correo </th>
+        <td mat-cell *matCellDef="let element"> {{element.estudiante.usuario.correo}} </td>
+      </ng-container>
+
       <ng-container matColumnDef="fecha">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha </th>
         <td mat-cell *matCellDef="let element"> {{element.fecha}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="horas">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Horas </th>
         <td mat-cell *matCellDef="let element"> {{element.horas}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="proyecto">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Proyecto </th>
         <td mat-cell *matCellDef="let element"> {{element.proyecto.nombre}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="categoria">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Categoría </th>
         <td mat-cell *matCellDef="let element"> {{element.categoria.nombre}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="estado">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
         <td mat-cell *matCellDef="let element"> {{element.estado}} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="detalles">
         <th mat-header-cell *matHeaderCellDef> Opciones </th>
         <td mat-cell *matCellDef="let element">
           <a mat-icon-button routerLink="/actividades/{{element.idGenerado}}" [disableRipple]="true" matTooltip="Descripción de la actividad"
           aria-label="descripción de la actividad">
             <i class="material-icons">description</i>
-          </a> 
+          </a>
           <a mat-icon-button routerLink="/actividades/editar/{{element.idGenerado}}"  [disableRipple]="true" matTooltip="Editar actividad"
           aria-label="editar actividad">
             <i class="material-icons">edit</i>
-          </a> 
+          </a>
           <button mat-icon-button [disableRipple]="true" (click)="onDelete(element.idGenerado)" matTooltip="Borrar actividad"
           aria-label="borrar actividad">
             <i class="material-icons">delete_outline</i>
@@ -50,5 +61,5 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-  </div> 
+  </div>
 </div>
